WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235326
input.labels doesn't work inside shadow DOM
https://bugs.webkit.org/show_bug.cgi?id=235326
Summary
input.labels doesn't work inside shadow DOM
Chris Dumez
Reported
2022-01-18 12:40:34 PST
input.labels doesn't work inside shadow DOM.
Attachments
WIP Patch
(8.58 KB, patch)
2022-01-18 12:41 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.06 KB, patch)
2022-01-18 13:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-01-18 12:41:14 PST
Created
attachment 449410
[details]
WIP Patch
Chris Dumez
Comment 2
2022-01-18 13:00:44 PST
Created
attachment 449413
[details]
Patch
EWS
Comment 3
2022-01-18 16:28:55 PST
Committed
r288162
(
246153@main
): <
https://commits.webkit.org/246153@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449413
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-18 16:29:43 PST
<
rdar://problem/87741546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug