input.labels doesn't work inside shadow DOM https://bugs.webkit.org/show_bug.cgi?id=235326

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline test that now has one extra passing subtest. This subtest was already passing in both
Gecko and Blink.

* web-platform-tests/html/semantics/forms/the-label-element/label-attributes.sub-expected.txt:

Source/WebCore:

HTMLCollection and LiveNodeList had the concept of "isRootedAtDocument" which meant that
we used the document as root when doing the traversal to find Nodes that belong to the
list/collection. However, when the list's owner is inside a shadow tree, this didn't
work as expected since we would traverse the main document's DOM tree instead of the
shadow tree. To address the issue, I now renamed "isRootedAtDocument" to
"isRootedAtTreeScope" and updated rootNode() to return the owner's tree scope's root
node, instead of the owner's document.

No new tests, rebaselined existing test.

* dom/Document.cpp:
(WebCore::Document::registerNodeListForInvalidation):
(WebCore::Document::registerCollection):
(WebCore::Document::unregisterCollection):
* dom/LiveNodeList.h:
(WebCore::LiveNodeList::rootNode const):
* dom/NameNodeList.h:
* dom/NodeRareData.h:
(WebCore::NodeListsNodeData::adoptDocument):
* html/HTMLCollection.cpp:
(WebCore::HTMLCollection::rootTypeFromCollectionType):
* html/HTMLCollection.h:
(WebCore::HTMLCollection::rootNode const):
(WebCore::HTMLCollection::isRootedAtTreeScope const):
(WebCore::HTMLCollection::isRootedAtDocument const): Deleted.
* html/LabelsNodeList.h:
* html/RadioNodeList.cpp:
(WebCore::RadioNodeList::RadioNodeList):
* html/RadioNodeList.h:



Canonical link: https://commits.webkit.org/246153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288162 268f45cc-cd09-0410-ab3c-d52691b4dbfc